# ultramarine

./: .clippy.toml  .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross  GEMINI.md  GEMINI_blob_sidecar_integration_report.md  LICENSE-MIT  Makefile  PHASE4_PROGRESS.md  PHASE5_PROGRESS.md  QUICK_REVIEW_GUIDE.md  README.md  compose.ipc.yaml  compose.yaml  deny.toml  dprint.json  rustfmt.toml  typos.toml
.github/workflows/: ci.yml  conventional-commits.yml  docker.yml  release.yml  reusable-setup.yml
.target_cli/: .rustc_info.json
assets/: genesis.json  jwtsecret
assets/p2p-keys/: reth0.key  reth1.key  reth2.key
crates/blob_engine/: Cargo.toml
crates/blob_engine/src/: engine.rs  error.rs  lib.rs  metrics.rs  verifier.rs
crates/blob_engine/src/store/: mod.rs  rocksdb.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  config_wrapper.rs  error.rs  file.rs  lib.rs  logging.rs  metrics.rs  new.rs  runtime.rs
crates/cli/src/cmd/: distributed_testnet.rs  init.rs  start.rs  testnet.rs
crates/consensus/: Cargo.toml  README.md
crates/consensus/src/: archive_metrics.rs  blob_verifier.rs  lib.rs  metrics.rs  state.rs  store.rs  streaming.rs
crates/consensus/src/state/tests/: mod.rs  support.rs
crates/consensus/src/store/: keys.rs
crates/consensus/tests/: archiver_flow.rs  blob_pruning.rs  blob_roundtrip.rs  blob_sync_commitment_mismatch.rs  blob_sync_parent_root.rs
crates/consensus/tests/common/: mocks.rs  mod.rs
crates/execution/: Cargo.toml  README.md
crates/execution/src/: client.rs  config.rs  engine.rs  error.rs  eth_rpc.rs  execution.rs  lib.rs  metrics.rs  notifier.rs
crates/execution/src/engine_api/: capabilities.rs  client.rs  json_structures.rs  jwt.rs  mod.rs
crates/execution/src/eth_rpc/: alloy_impl.rs  mod.rs
crates/execution/src/transport/: http.rs  ipc.rs  mock.rs  mod.rs
crates/genesis/: Cargo.toml
crates/genesis/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: app.rs  archiver.rs  lib.rs  node.rs
crates/test/: Cargo.toml
crates/test/src/: lib.rs
crates/test/tests/: blob_blobless_sequence.rs  blob_decided_el_rejection.rs  blob_new_node_sync.rs  blob_pruning.rs  blob_restart_multi_height.rs  blob_restart_multi_height_sync.rs  blob_restream.rs  blob_restream_multi_round.rs  blob_roundtrip.rs  blob_sync_commitment_mismatch.rs  blob_sync_failure.rs  full_node.rs  restart_hydrate.rs  sync_package_roundtrip.rs
crates/test/tests/blob_state/: blob_blobless_sequence.rs  blob_decided_el_rejection.rs  blob_new_node_sync.rs  blob_pruning.rs  blob_restart_multi_height.rs  blob_restart_multi_height_sync.rs  blob_restream.rs  blob_restream_multi_round.rs  blob_roundtrip.rs  blob_sync_commitment_mismatch.rs  blob_sync_failure.rs  restart_hydrate.rs  sync_package_roundtrip.rs
crates/test/tests/common/: mocks.rs  mod.rs
crates/test/tests/full_node/: node_harness.rs
crates/test_support/: Cargo.toml
crates/test_support/src/: execution_requests.rs  lib.rs
crates/types/: Cargo.toml  README.md  build.rs
crates/types/proto/: consensus.proto  sync.proto
crates/types/src/: address.rs  aliases.rs  archive.rs  archiver_config.rs  blob.rs  blob_metadata.rs  consensus_block_metadata.rs  constants.rs  context.rs  engine_api.rs  genesis.rs  height.rs  lib.rs  proposal.rs  proposal_part.rs  proto.rs  signing.rs  sync.rs  validator_set.rs  value.rs  value_metadata.rs  vote.rs
crates/types/src/codec/proto/: mod.rs
crates/types/src/ethereum_compat/: beacon_block_body.rs  beacon_header.rs  merkle.rs  mod.rs
crates/types/src/utils/: validators.rs
crates/utils/: Cargo.toml
crates/utils/src/: main.rs  tx.rs
crates/utils/src/commands/: genesis.rs  mod.rs  spam.rs
docs/: 4844-sidecar-blueprint.md  ARCHIVER_OPS.md  BLOB_HANDLING_FLOW_ANALYSIS.md  BLOB_INTEGRATION_STATUS.md  BLOB_LIMIT_CONFIGURATION.md  BLOB_SIDECAR_TECHNICAL_REPORT.md  BLOB_SYNC_GAP_ANALYSIS.md  BLUERPRINT_NOTES_ON_ACTOR_REFACTOR_PLAN.md  CODEBASE_REVIEW.md  DEV_WORKFLOW.md  FINAL_PLAN.md  FINAL_PLAN_UPDATE_SUMMARY.md  IMPLEMENTATION_GAPS.md  IMPLEMENTATION_ROADMAP.md  LIGHTHOUSE_COMPARISON.md  LIGHTHOUSE_PARITY_COMPLETE.md  MALACHITE_UPGRADE_STATUS.md  MERKLE_PROOF_VERIFICATION_REPORT.md  MERKLE_PROOF_VERIFICATION_SUMMARY.md  MESSAGE_HANDLER_AUDIT.md  METRICS_PROGRESS.md  PHASE4_CRYPTO_COMPLETE.md  PHASE4_PROGRESS.md  PHASE5_SUMMARY.md  PHASE5_TESTNET.md  PHASE6_ADDITIONAL_STUFF.md  PHASE6_ARCHIVAL_DESIGN.md  PHASE6_ARCHIVER_PRUNER_V0.md  PHASE6_ARCHIVE_PRUNE.md  PHASE6_ARCHIVE_PRUNE_FINAL.md  PHASE6_REVIEW_AND_DA_OPTIONS.md  PHASE_5_COMPLETION.md  PROGRESS_SUMMARY_2025-10-28.md  QUICK_FIX_GUIDE.md  REVIEW_2025_11_08.md  REVIEW_REPORT.md  REVIEW_RESPONSE.md  SESSION_SUMMARY.md  STATUS_UPDATE_2025-10-21.md  SYNCING_IMPLEMENTATION_V0.md  (+15 more)
docs/journal/: BUG-011-timestamp-drift.md  BUG-012-fullnode-sync-race.md  BUG-013-chain-split-parent-mismatch.md  PERF-001-fibernet-throughput.md  PERF-SUMMARY-fibernet-throughput-journey.md
docs/knowledge_base/: block-timing.md  cl-el-head-gating.md  cl-runtime.md  el-gas-limits.md  el-persistence.md  execution-genesis.md  itest-node-harness.md  p2p-sync-limits.md
infra/: .gitignore  FIREWALL.md  INFRA_ASSESSMENT.md  INFRA_OVERVIEW.md  INFRA_RECOMMENDATIONS.md  README.md  SECRETS.md  infra_progress.md
infra/ansible/: .ansible-lint  .yamllint  ansible.cfg
infra/ansible/playbooks/: blockscout.yml  clean_logs.yml  common_only.yml  deploy.yml  doctor.yml  doctor_pre.yml  down.yml  firewall.yml  health.yml  logs.yml  roll.yml  status.yml  storage.yml  up.yml  wipe.yml
infra/manifests/: alphanet.yaml  example.yaml  fibernet.yaml
infra/networks/: example_tmp.err
infra/networks/example/: inventory.yml  network.lock.json
infra/networks/example_tmp/: inventory.yml
infra/networks/fibernet/: inventory.yml  network.lock.json  secrets.sops.yaml
infra/templates/systemd/: grafana.service.j2  load-reth@.service.j2  (+2 more)
monitoring/: prometheus.host.yml  prometheus.ipc.yml  prometheus.yml
monitoring/config-grafana/: grafana.ini
scripts/: add_peers.sh  spawn-tmux.bash  spawn.bash
(+41 files in other folders)
