[workspace]
resolver = "2"

members = [
    "bin/ultramarine",
    "crates/consensus",
    "crates/execution",
    "crates/node",
    "crates/types",
]
default-members = ["bin/ultramarine"]

[workspace.package]
version = "0.1.0"
authors = ["Load Network"]
edition = "2024"
exclude = ["benches/", "tests/", "testdata/"]
homepage = "https://github.com/loadnetwork/ultramarine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/loadnetwork/ultramarine"
rust-version = "1.88"

[workspace.dependencies]
# ultramarine dependencies
ultramarine-consensus = { path = "crates/consensus" }
ultramarine-execution = { path = "crates/execution" }
ultramarine-node = { path = "crates/node" }
ultramarine-types = { path = "crates/types" }

[workspace.lints.clippy]
all = "warn"
dbg_macro = "warn"
todo = "warn"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.test]
opt-level = 1
