[workspace]
resolver = "2"

members = [
    "bin/ultramarine",
    "crates/cli",
    "crates/consensus",
    "crates/execution",
    "crates/node",
    "crates/types",
    "crates/utils",
]
default-members = ["bin/ultramarine", "crates/utils"]

[workspace.package]
version = "0.1.0"
authors = ["Load Network"]
edition = "2024"
exclude = ["benches/", "tests/", "testdata/"]
homepage = "https://github.com/loadnetwork/ultramarine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/loadnetwork/ultramarine"
rust-version = "1.89"

[workspace.lints.clippy]
all = "warn"
dbg_macro = "warn"
todo = "warn"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.dependencies]
ultramarine-cli = { path = "crates/cli" }
# ultramarine dependencies
ultramarine-consensus = { path = "crates/consensus" }
ultramarine-execution = { path = "crates/execution" }
ultramarine-node = { path = "crates/node" }
ultramarine-types = { path = "crates/types" }
# eth types

alloy-consensus = { version = "1.0.23", default-features = false }
alloy-eips = "1.0.23"
alloy-genesis = "1.0.23"
alloy-network = "1.0.23"
alloy-primitives = { version = "1.3.0", default-features = false }
alloy-provider = "1.0.23"
alloy-rlp = "0.3.1"
alloy-rpc-client = "1.0.23"
alloy-rpc-types = { version = "1.0.23", features = [
  "eth",
], default-features = false }
alloy-rpc-types-engine = { version = "1.0.23", features = [
  "ssz",
], default-features = false }
alloy-rpc-types-eth = { version = "1.0.23", default-features = false }
alloy-rpc-types-txpool = { version = "1.0.23" }
alloy-signer = { version = "1.0.23" }
alloy-signer-local = { version = "1.0.23", features = ["keystore", "mnemonic"] }
alloy-transport-http = { version = "1.0.23", features = ["jwt-auth"] }

ethereum_ssz = "0.9.0"

color-eyre = "0.6.5"

tokio = "1.47.1"

async-trait = "0.1.85"
axum = "0.8.4"
bytes = { version = "1.10.1", default-features = false }
bytesize = "2.0.1"
chrono = "0.4.42"
clap = "4.5.44"
config = { version = "0.15.3", features = ["toml"], default-features = false }
derive-where = "1.6.0"
directories = "6.0.0"
ethereum_serde_utils = "0.8.0"
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.14.0"
itf = "0.4.0"
jsonwebtoken = "9"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
rand = { version = "0.8.5", features = ["std_rng"] }
redb = "3.0.0"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.142"
sha3 = "0.10.8"
signature = "2.2.0"
thiserror = { version = "2.0.14", default-features = false }
toml = "0.9.5"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2"

[workspace.dependencies.malachitebft-app]
package = "informalsystems-malachitebft-app"
rev = "0968a34ba747130467569b1d10b2b1ef18f4b69b"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-app-channel]
package = "informalsystems-malachitebft-app-channel"
rev = "0968a34ba747130467569b1d10b2b1ef18f4b69b"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-codec]
package = "informalsystems-malachitebft-codec"
rev = "0968a34ba747130467569b1d10b2b1ef18f4b69b"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-config]
package = "informalsystems-malachitebft-config"
rev = "0968a34ba747130467569b1d10b2b1ef18f4b69b"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-core-consensus]
package = "informalsystems-malachitebft-core-consensus"
rev = "0968a34ba747130467569b1d10b2b1ef18f4b69b"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-core-types]
package = "informalsystems-malachitebft-core-types"
rev = "0968a34ba747130467569b1d10b2b1ef18f4b69b"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-metrics]
package = "informalsystems-malachitebft-metrics"
rev = "0968a34ba747130467569b1d10b2b1ef18f4b69b"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-proto]
package = "informalsystems-malachitebft-proto"
rev = "0968a34ba747130467569b1d10b2b1ef18f4b69b"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-signing-ed25519]
package = "informalsystems-malachitebft-signing-ed25519"
rev = "0968a34ba747130467569b1d10b2b1ef18f4b69b"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-sync]
package = "informalsystems-malachitebft-sync"
rev = "0968a34ba747130467569b1d10b2b1ef18f4b69b"
git = "https://github.com/circlefin/malachite.git"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.test]
opt-level = 1
