[workspace]
resolver = "2"

members = [
    "bin/ultramarine",
    "infra/gen/netgen",
    "crates/blob_engine",
    "crates/cli",
    "crates/consensus",
    "crates/execution",
    "crates/genesis",
    "crates/node",
    "crates/test",
    "crates/test_support",
    "crates/types",
    "crates/utils",
]
default-members = ["bin/ultramarine", "crates/utils"]

[workspace.package]
version = "0.1.0"
authors = ["Load Network"]
edition = "2024"
exclude = ["benches/", "tests/", "testdata/"]
homepage = "https://github.com/loadnetwork/ultramarine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/loadnetwork/ultramarine"
rust-version = "1.89"

[workspace.lints.clippy]
all = "warn"
dbg_macro = "warn"
todo = "warn"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.dependencies]
# eth types

alloy-consensus = { version = "1.0.23", default-features = false }
alloy-eips = "1.0.23"
alloy-genesis = "1.0.23"
alloy-network = "1.0.23"
alloy-primitives = { version = "1.3.0", default-features = false }
alloy-provider = { version = "1.0.23", default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
alloy-rlp = "0.3.1"
alloy-rpc-client = { version = "1.0.23", default-features = false, features = ["reqwest"] }
alloy-rpc-types = { version = "1.0.23", features = ["eth"], default-features = false }
alloy-rpc-types-engine = { version = "1.0.23", features = ["serde", "ssz"], default-features = false }
alloy-rpc-types-eth = { version = "1.0.23", features = ["serde"], default-features = false }
alloy-rpc-types-txpool = { version = "1.0.23" }
alloy-signer = { version = "1.0.23" }
alloy-signer-local = { version = "1.0.23", features = ["keystore", "mnemonic"] }
alloy-transport-http = { version = "1.0.23", default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }

async-trait = "0.1.85"
axum = "0.8.4"
bytes = { version = "1.10.1", default-features = false }
bytesize = "2.0.1"
c-kzg = { version = "2.1.0", default-features = false }
chrono = "0.4.38"
clap = "4.5.44"

color-eyre = "0.6.5"
config = { version = "0.15.3", features = ["toml"], default-features = false }
derive-where = "1.6.0"
directories = "6.0.0"

ethereum_hashing = "0.7.0"
ethereum_serde_utils = "0.8.0"
ethereum_ssz = "0.9.0"
fixed_bytes = { git = "https://github.com/sigp/lighthouse.git", package = "fixed_bytes", rev = "v8.0.0-rc.1" }
getrandom = { version = "0.2.14", features = ["std"] }
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.14.0"
itf = "0.4.0"
jsonwebtoken = "9"
merkle_proof = { git = "https://github.com/sigp/lighthouse.git", package = "merkle_proof", rev = "v8.0.0-rc.1" }
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
protoc-bin-vendored = "3.2.0"
rand = { version = "0.8.5", features = ["std_rng"] }
redb = "3.0.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
safe_arith = { git = "https://github.com/sigp/lighthouse.git", package = "safe_arith", rev = "v7.1.0" }
serde = "1.0.219"
serde_json = "1.0.142"
serial_test = "2.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
signature = "2.2.0"
tempfile = "3.13.0"
thiserror = { version = "2.0.14", default-features = false }
tokio = "1.47.1"
toml = "0.9.5"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tree_hash = "0.10.0"
tree_hash_derive = "0.10.0"
# ultramarine dependencies
ultramarine-blob-engine = { path = "crates/blob_engine" }
ultramarine-cli = { path = "crates/cli" }
ultramarine-consensus = { path = "crates/consensus" }
ultramarine-execution = { path = "crates/execution" }
ultramarine-node = { path = "crates/node" }
ultramarine-test-support = { path = "crates/test_support" }
ultramarine-types = { path = "crates/types" }
url = "2"

[workspace.dependencies.malachitebft-app]
package = "informalsystems-malachitebft-app"
rev = "b205f4252f3064d9a74716056f63834ff33f2de9"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-app-channel]
package = "informalsystems-malachitebft-app-channel"
rev = "b205f4252f3064d9a74716056f63834ff33f2de9"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-codec]
package = "informalsystems-malachitebft-codec"
rev = "b205f4252f3064d9a74716056f63834ff33f2de9"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-config]
package = "informalsystems-malachitebft-config"
rev = "b205f4252f3064d9a74716056f63834ff33f2de9"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-core-consensus]
package = "informalsystems-malachitebft-core-consensus"
rev = "b205f4252f3064d9a74716056f63834ff33f2de9"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-core-types]
package = "informalsystems-malachitebft-core-types"
rev = "b205f4252f3064d9a74716056f63834ff33f2de9"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-engine]
package = "informalsystems-malachitebft-engine"
rev = "b205f4252f3064d9a74716056f63834ff33f2de9"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-metrics]
package = "informalsystems-malachitebft-metrics"
rev = "b205f4252f3064d9a74716056f63834ff33f2de9"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-proto]
package = "informalsystems-malachitebft-proto"
rev = "b205f4252f3064d9a74716056f63834ff33f2de9"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-signing]
package = "informalsystems-malachitebft-signing"
rev = "b205f4252f3064d9a74716056f63834ff33f2de9"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-signing-ed25519]
package = "informalsystems-malachitebft-signing-ed25519"
rev = "b205f4252f3064d9a74716056f63834ff33f2de9"
git = "https://github.com/circlefin/malachite.git"

[workspace.dependencies.malachitebft-sync]
package = "informalsystems-malachitebft-sync"
rev = "b205f4252f3064d9a74716056f63834ff33f2de9"
git = "https://github.com/circlefin/malachite.git"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.test]
opt-level = 1
