[package]
name = "ultramarine-blob-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
ultramarine-types = { path = "../types" }

# Cryptography - KZG verification
c-kzg.workspace = true
hex.workspace = true
rocksdb = "0.22"

# Async runtime
tokio.workspace = true

# Serialization (protobuf for consistency with network layer)
malachitebft-proto.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Metrics
malachitebft-app-channel.workspace = true

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
