[package]
name = "ultramarine-consensus"
version.workspace = true
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ultramarine-cli.workspace = true
ultramarine-execution.workspace = true
ultramarine-types.workspace = true

malachitebft-app-channel.workspace = true
malachitebft-proto.workspace = true

alloy-consensus = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
async-trait.workspace = true
bytes.workspace = true
color-eyre.workspace = true
derive-where.workspace = true
ethereum_ssz = "0.8"

hex.workspace = true
prost.workspace = true
rand.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
