[package]
name = "ultramarine-execution"
version.workspace = true
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ultramarine-types.workspace = true

malachitebft-proto.workspace = true

alloy-consensus = { workspace = true }
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-rpc-types-txpool = { workspace = true }
alloy-transport-http = { workspace = true }
ethereum_serde_utils = { workspace = true }

async-trait.workspace = true
bytes.workspace = true
color-eyre.workspace = true
derive-where.workspace = true
ethereum_ssz.workspace = true

hex.workspace = true
jsonwebtoken.workspace = true
prost.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[lints]
workspace = true
