[package]
name = "ultramarine-genesis"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-genesis = { workspace = true }
alloy-primitives = { workspace = true }
alloy-signer-local = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
serde_json = { workspace = true }
ultramarine-types = { path = "../types" }
