[package]
name = "ultramarine-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ultramarine-blob-engine.workspace = true
ultramarine-cli.workspace = true
ultramarine-consensus.workspace = true
ultramarine-execution.workspace = true
ultramarine-types.workspace = true

malachitebft-app-channel.workspace = true
malachitebft-engine.workspace = true
malachitebft-proto.workspace = true

alloy-consensus = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-primitives = { workspace = true }
async-trait.workspace = true
bytes.workspace = true
color-eyre.workspace = true
derive-where.workspace = true
ethereum_ssz.workspace = true

hex.workspace = true
prost.workspace = true
rand.workspace = true
redb.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[lints]
workspace = true
