[package]
name = "ultramarine-test"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
ultramarine-blob-engine.workspace = true
ultramarine-consensus.workspace = true
ultramarine-execution.workspace = true
ultramarine-types.workspace = true
ultramarine-cli.workspace = true
ultramarine-node.workspace = true

malachitebft-app-channel.workspace = true
malachitebft-app.workspace = true
malachitebft-proto.workspace = true
malachitebft-config.workspace = true
malachitebft-engine.workspace = true

alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
bytes.workspace = true
color-eyre.workspace = true
async-trait.workspace = true
ethereum_ssz.workspace = true
serial_test.workspace = true
tempfile.workspace = true

c-kzg.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
multiaddr = "0.18.2"

# Tokio async runtime for integration tests
[dev-dependencies.tokio]
workspace = true
features = ["macros", "rt", "rt-multi-thread", "time", "sync", "test-util"]

[lints]
workspace = true
