[package]
name = "ultramarine-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

malachitebft-app = { workspace = true }
malachitebft-codec = { workspace = true }
malachitebft-config = { workspace = true }
malachitebft-core-consensus = { workspace = true }
malachitebft-core-types = { workspace = true }
malachitebft-proto = { workspace = true }
malachitebft-signing-ed25519 = { workspace = true, features = [
  "rand",
  "serde",
] }
malachitebft-sync = { workspace = true }

serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }

[lints]
workspace = true
