[package]
name = "ultramarine-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true # Added for EIP-4844 kzg_to_versioned_hash (Phase 1)
alloy-rpc-types = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-rpc-types-txpool = { workspace = true }
ethereum_hashing.workspace = true
ethereum_serde_utils = { workspace = true }
fixed_bytes.workspace = true
# Phase 4: SSZ and Merkle proof generation for blob sidecars
merkle_proof.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

bytes.workspace = true
hex.workspace = true
malachitebft-app = { workspace = true }
malachitebft-codec = { workspace = true }
malachitebft-config = { workspace = true }
malachitebft-core-consensus = { workspace = true }
malachitebft-core-types = { workspace = true }
malachitebft-proto = { workspace = true }
malachitebft-signing = { workspace = true }
malachitebft-signing-ed25519 = { workspace = true, features = ["rand", "serde"] }
malachitebft-sync = { workspace = true }
prost.workspace = true
prost-types = { workspace = true }
rand.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
sha2.workspace = true
sha3.workspace = true

alloy-primitives.workspace = true
async-trait.workspace = true

[build-dependencies]
prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[lints]
workspace = true
