[package]
name = "ultramarine-utils"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ultramarine-utils"
path = "src/main.rs"

[dependencies]
ultramarine-types = { path = "../types" }

# Core dependencies
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Alloy dependencies for Ethereum operations
alloy-consensus = { workspace = true }
alloy-genesis = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rpc-types = { workspace = true }
alloy-rpc-types-txpool = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-eips = { workspace = true }
alloy-rlp = { workspace = true }

k256 = "0.13"
c-kzg = { workspace = true }
